<resources>
    <string name="app_name">Zupa</string>

    <string name="email">Email</string>
    <string name="pass">Password</string>

    <string name="name">Nama</string>
    <string name="nik">NIK</string>
    <string name="nkk">No. KK</string>
    <string name="telp">No. HP</string>
    <string name="repass">Masukkan ulang password</string>

    <string name="form">Form Pengaduan</string>
    <string name="lokasi">Lokasi kejadian</string>
    <string name="tanggal_kejadian">Tanggal kejadian</string>
    <string name="waktu">Waktu kejadian</string>
    <string name="tipe_kejahatan">Tipe kejahatan</string>
    <string name="detai_jekadian">Detail kejadian</string>
    <string name="nukti_kejahatan">Bukti kejahatan</string>
    <string name="loc_file_kejadian">file address</string>
    <string name="share_bukti">Bukti kekerasan </string>

    <string-array name="tipeKejahatan">
        <item>Penculikan</item>
        <item>Penganiayaan</item>
        <item>Pemekorsaan</item>
        <item>Bullying</item>
        <item>KDRT</item>
    </string-array>

    <string name="hello">Hello</string>
    <string name="zanna_kirana">Zanna Kirana</string>
    <string name="jl_antasari_jakarta_selatan">Jl. Antasari, Jakarta Selatan</string>
    <string name="zupa_tips_today">Zupa Tips Today</string>
    <string name="Zupatips">selalu beri kabar orang terdekat ketika hendak berpergian</string>
    <string name="show_more_tips">SHOW MORE TIPS</string>
    <string name="button_home">Home</string>
    <string name="button_form">Form</string>
    <string name="button_history">History</string>
    <string name="button_profile">Profile</string>
    <string name="placeholder">placeholder</string>
    <string name="no_id">No. Id</string>
    <string name="no_kk">No. KK</string>
    <string name="no_hp">No. Hp</string>
    <string name="change_picture">Change Picture</string>
    <string name="save">Save</string>
    <string name="log_in">Log in</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="addUserSuccess">Success</string>
    <string name="sos">SOS</string>
</resources>