<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/background_main_menu">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_gravity="bottom|center_horizontal">

        <ImageView
            android:id="@+id/btn_form"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/contract"
            android:layout_marginEnd="35dp"
            android:layout_centerVertical="true"/>

        <ImageView
            android:id="@+id/btn_sos"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/sos_button"
            android:elevation="5dp"
            android:layout_toEndOf="@id/btn_form"/>

        <ImageView
            android:id="@+id/btn_history"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/history"
            android:layout_toEndOf="@id/btn_sos"
            android:layout_marginStart="35dp"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="25dp"
        android:paddingRight="25dp">

        <ImageView
            android:id="@+id/btn_log_out"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/log_out_putih"
            android:layout_marginTop="15dp"
            android:layout_alignParentEnd="true"/>

        <ImageView
            android:id="@+id/profile_pic"
            android:layout_width="144dp"
            android:layout_height="144dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="100dp"
            android:layout_marginTop="108dp"
            android:layout_marginEnd="100dp"
            app:srcCompat="@drawable/profile_picture" />

        <TextView
            android:id="@+id/Hello"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textSize="22sp"
            android:layout_below="@+id/profile_pic"
            android:fontFamily="sans-serif-light"
            android:paddingTop="18dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/Name"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/zanna_kirana"
            android:textSize="26sp"
            android:layout_below="@+id/Hello"
            android:fontFamily="sans-serif-light"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity"
            android:orientation="horizontal"
            android:id="@+id/linear_Location"
            android:layout_below="@+id/Name"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/location_icon"/>

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/jl_antasari_jakarta_selatan"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/zupatipsheader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="center"
            android:text="@string/zupa_tips_today"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            android:layout_below="@+id/linear_Location"/>

        <TextView
            android:id="@+id/zupatips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Zupatips"
            android:fontFamily="sans-serif-condensed-light"
            android:textStyle="bold"
            android:layout_below="@+id/zupatipsheader"
            android:textSize="30sp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:gravity="center"/>

    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>


