<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="60dp"
        android:layout_margin="20dp"
        app:cardCornerRadius="20dp"
        android:layout_gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/back_button_editprofile"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/left_arrow"
                android:layout_marginStart="18dp"
                android:layout_marginTop="19dp"/>

            <ImageView
                android:id="@+id/photoProfile"
                android:layout_width="144dp"
                android:layout_height="144dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="100dp"
                android:layout_below="@+id/back_button_editprofile"
                android:src="@drawable/profile_picture" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/editProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/black"
                android:text="@string/change_picture"
                android:layout_marginTop="10dp"
                app:cornerRadius="13dp"
                android:layout_below="@+id/photoProfile"

                android:backgroundTint="@color/white"/>

            <LinearLayout
                android:id="@+id/TextFieldRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/editProfile"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editEmail"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    app:errorEnabled="true"
                    app:shapeAppearance="@style/Rounded">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_input_editEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editNomorHP"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/no_hp"
                    app:errorEnabled="true"
                    android:layout_below="@+id/NoIdTextField"
                    app:shapeAppearance="@style/Rounded">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_input_editNoHP"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editPass"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pass"
                    app:errorEnabled="true"
                    android:layout_below="@+id/NoKKTextField"
                    app:endIconMode="password_toggle"
                    app:shapeAppearance="@style/Rounded">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_input_editPass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editRepass"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/repass"
                    app:errorEnabled="true"
                    app:endIconMode="password_toggle"
                    android:layout_below="@+id/NoHandphone"
                    app:shapeAppearance="@style/Rounded">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_input_editRepass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/TextFieldRow"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="@string/save"
                app:cornerRadius="13dp"
                android:textStyle="normal"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>